--- a/static/__index.html
+++ b/static/__index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
@@ -13,10 +14,14 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+		rel="stylesheet">
+
 	__SCRIPT__
 </head>
 
 <body>
 	<noscript>Please enable Javascript for best experience.</noscript>
 </body>
+
 </html>
